# ContinuousTimeIsing

./: ALGORITHM_PERFORMANCE.md  ALGORITHM_README.md  CMakeLists.txt  ConTimeIsing.cpp  README.md  analyze_high_res.py  analyze_high_res_final.py  analyze_timeseries.py  analyze_ts.py  gen_summary.py  perf_data.txt  run_high_res.py  run_high_res_simple.py  run_per_L_split.py  run_ratio_grid.py  run_simple_grid.py  run_targeted_Ls.py  write_summary.py
bench/: analyze_and_plot.py  gen_plot.py  high_res_log.txt  make_plot.py  plot_binder_cumulant.py  plot_binder_range.py  run_benchmark.py  run_high_res.py  summary_binder_Ls.csv  summary_binder_range.csv  summary_per_point.csv  tmp_L32_r0.952778.csv  tmp_ts_L24_r0.9800.csv  tmp_ts_L24_r0.9900.csv  tmp_ts_L24_r1.1000.csv  tmp_ts_L32_r1.068889.csv  tmp_ts_L48_r1.065873.csv  ts_L16.csv  ts_L32.csv  ts_L32_high_res.csv  ts_L48_high_res.csv  ts_L64.csv  ts_long_L.csv
